	**************************************************
	*						 *
	*	       0.64 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 0.64.1

NEW FEATURES

    o   zip files can be used for storing help and example files. See
	the help files for "help" and "example" for details.

    o   New submission method "none" (for not sending email) in bug.report().


BUG FIXES

    o   ppois rounded non-integer `q', should truncate.

    o   pnbinom was wrong for non-integer `q'.

    o   dbinom, dgeom, dnbinom, dpois give 0 with a warning for
	non-integer arguments.

    o   load / save / data allow unlimited string sizes.

    o   strsplit() allows unlimited string size.


		CHANGES IN R VERSION 0.64.0

NEW FEATURES

    o   Files BUGS and FAQ are now included with distribution and
	various "front matter" files have been cleaned up.

    o	readline has now an argument  prompt = ""

    o	coplot() now labels levels when conditioning variable is factor
	(John Maindonald).

    o	A new function filled.contour() has been added.	 It produces
	a variant of contour plots where the area between contours
	is filled with a solid colour.	The function (currently)
	uses the layout() function and so is restricted to a full
	page display.

    o	The function terrain.colors() has been modified to remove a
	visual discontinuity (at yellow).  In addition, a function
	cm.colors() which implements a Cleveland-style cyan-magenta
	palette has been added.

    o	Primitive function .External() to call dynamically loaded
	`internal'-style functions (code from Jean Meloche).

    o	Function page() to view an R object in a pager.

    o	Support for handling embedded '\n's in text strings
	handed to low-level graphics functions has been added.
	Some changes to the PostScript graphics driver were
	needed to support this, so there may some minor change
	in the appearance of plots produced in PostScript.
