@@ -452,6 +452,9 @@ static struct tms timeinfo;
 #define Max_Nsize 20000000   /* must be < LONG_MAX (= 2^32 - 1 =) 2147483647 = 2.1e9 */
 #define Max_Vsize (2048*Mega)/* must be < LONG_MAX */
 
+#define Min_Nsize 200000
+#define Min_Vsize (2*Mega)
+
 int main(int ac, char **av)
 {
     int value, ierr;
@@ -462,6 +465,21 @@ int main(int ac, char **av)
     StartTime = times(&timeinfo);
 #endif
     R_Quiet = 0;
+
+    if(p = getenv("R_VSIZE")) {
+	value = Decode2Long(p, &ierr);
+	if(ierr < 0 || value > Max_Vsize || value < Min_Vsize) 
+	    REprintf("WARNING: invalid R_VSIZE ignored;");
+	else
+	    R_VSize = value;
+    }
+    if(p = getenv("R_NSIZE")) {
+	value = Decode2Long(p, &ierr);
+	if(ierr < 0 || value > Max_Nsize || value < Min_Nsize) 
+	    REprintf("WARNING: invalid R_NSIZE ignored;");
+	else
+	    R_NSize = value;
+    }
 
     while(--ac) {
 	if(**++av == '-') {
@@ -550,7 +568,7 @@ int main(int ac, char **av)
 		    REprintf("WARNING: vsize ridiculously low, Megabytes assumed\n");
 		    value *= Mega;
 		}
-		if(value > Max_Vsize || value < R_VSize)
+		if(value < Min_Vsize || value > Max_Vsize)
 		    REprintf("WARNING: invalid v(ector heap)size '%d' ignored;"
 			     "using default = %gM\n", value, R_VSize / Mega);
 		else
@@ -574,7 +592,7 @@ int main(int ac, char **av)
 		    REprintf("--nsize %ld'%c': too large", value,
 			     (ierr == 1)?'M':((ierr == 2)?'K':'k'));
 		}
-		if(value < R_NSize || value > Max_Nsize)
+		if(value < Min_Nsize || value > Max_Nsize)
 		    REprintf("WARNING: invalid language heap (n)size '%d' ignored,"
 			     " using default = %d\n", value, R_NSize);
 		else
